--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-charts": "^2.0.0-beta.7",
+    "react-content-loader": "^5.1.2",
     "react-dom": "^16.13.1",
     "react-query": "^2.23.1",
     "react-resizable": "^1.11.0",
